--- a/assets/css/showcase.css
+++ b/assets/css/showcase.css
@@ -21,8 +21,7 @@
 }
 
 #showcase > button {
-  position: absolute;
-  top: 624px;
+  margin-top: 72px;
   font-size: 20px;
   color: #fff;
   width: 200px;
@@ -30,4 +29,40 @@
   border: 0;
   border-radius: 50px;
   background-image: linear-gradient(#2655EE,#34B3FF);
+  cursor: pointer;
+}
+
+#client-logo {  
+  left: 244px;
+  margin-top: 132px;
+  width: 788px;
+  height: 66px;
+}
+
+.logo {
+  float: left;
+  margin-right: 24px;
+}
+
+#client-logo > .logo-discord img {
+  width: 196px;
+  height: 66px;
+}
+
+#client-logo > .logo-groupm img {
+  width: 120px;
+  height: 42px;
+  transform: translateY(30%);
+}
+
+#client-logo > .logo-audiomack img {
+  width: 212px;
+  height: 28px;
+  transform: translateY(40%);
+}
+
+#client-logo > .logo-microsoft img {
+  width: 130px;
+  height: 66px;
+  transform: translateY(-10%);
 }
