--- a/assets/css/showcase.css
+++ b/assets/css/showcase.css
@@ -65,7 +65,7 @@
   top: 0;
   display: flex;
   justify-content: space-between;
-  width: 1vh;
+  width: 1vw;
 }
 
 #showcase-background > .bubble {
