--- a/assets/css/showcase.css
+++ b/assets/css/showcase.css
@@ -77,3 +77,13 @@
   margin-top: -620px;
   margin-left: 160px;
 }
+
+.azul {
+  position: absolute;
+  left: 550px;
+  top: 70%;
+  background: #207BFA;
+  border: 10px solid #207BFA;
+  border-radius: 25px;
+  box-shadow: 0px 3px 9px rgba(35, 84, 243, 0.451);
+}
